--- a/Blobswarm/.classpath
+++ b/Blobswarm/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/Martin/Documents/GitHub/OSM-grupp-14/kryonet-2.21-all.jar">
+	<classpathentry exported="true" kind="lib" path="/Users/tomas/git/OSM-grupp-14/kryonet-2.21-all.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="http://kryonet.googlecode.com/svn/api/v2/"/>
 		</attributes>
